Fixed overlapping bio text and image

--- a/src/main.css
+++ b/src/main.css
@@ -183,7 +183,7 @@ a {
 #is_that_him {
 	top: 215px;
     width: 25%;
-    left: 230px;
+    left: 8vw;
     transform: translateY(-50%);
 }
 #bio-block {
